# plansys2-hospital-grupo-dia-libre

./: CMakeLists.txt  README.md  nei_domain.pddl  package.xml
launch/: nei_launcher.py  plansys2_bt_example_launch.py
map/: hospital.yaml  hospitasal.yaml  map.pgm  map_1650481611.yaml
params/: nav2_params.yaml
pddl/: nei_domain.pddl
src/: drop_action_node.cpp  move_action_node.cpp  nei_action_node.cpp  nei_controller.cpp  pick_action_node.cpp
src/behavior_tree_nodes/: Move.cpp
waypoints/: waypoints.txt
